--- a/themes/yilia/layout/_partial/head.ejs
+++ b/themes/yilia/layout/_partial/head.ejs
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8">
   <link rel="shortcut icon" href="favicon.ico" />
+   <link href="/atom.xml" rel="alternate" title="ATOM" type="application/atom+xml" />
   <%
   var title = page.title;
 
